# premier-league-forecast

./: .gitignore  .replit  AGENTS.md  CLAUDE.md  CLI_GUIDE.md  GEMINI.md  QUICKSTART.md  TESTING_PLAN.md  app.py  cli.py  debug_full_html_2025.txt  debug_parsed_matches_2025.txt  debug_raw_content_2025.txt  debug_start_2025.txt  fix.md  forecast  logs-jca374-shl-main-app.py-2025-11-04T18_24_59.387Z.txt  logs-jca374-shl-main-app.py-2025-11-04T20_40_30.286Z.txt  odds_api.md  odds_implementation_plan.md  pyproject.toml  replit.md  requirements.txt  temp.md  temp.txt  temp.txt.pub
attached_assets/: Pasted-Looking-at-the-project-knowledge-search-results-I-can-see-the-issue-The-upcoming-fixtures-data-sho-1751547025524_1751547025525.txt  Pasted-The-reason-you-re-getting-a-404-is-simply-that-there-is-no-server-side-HTML-at-text-https-a-1751471658609_1751471658610.txt  Pasted-pandas-errors-EmptyDataError-No-columns-to-parse-from-file-Traceback-File-home-runner-workspac-1751473148096_1751473148098.txt  implementation_plan_1751467370514.md
data/: .gitkeep
data/clean/: fixtures.csv  results.csv  results_backup.csv  upcoming_fixtures_backup.csv
data/db/: allsvenskan.db  shl.db
data/processed/: team_stats.csv
data/raw/: fixtures_results_raw.csv
models/: poisson_params.pkl
premier_league/analysis/: aggregator.py
premier_league/config/: config_loader.py  odds_config.yaml
premier_league/data/: cleaner.py  odds_api.py  odds_schema.py  odds_strength_extractor.py  scraper.py  (+1 more)
scripts/: migrate_column_names.py
tests/: test_column_standardization.py  test_odds_integration.py
(+31 files in other folders)
