[project]
name = "shl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "selenium>=4.34.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
    "trafilatura>=2.0.0",
    "unidecode>=1.4.0",
    "webdriver-manager>=4.0.2",
]
